# deepagents

./: .env.example  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
examples/research/: requirements.txt  research_agent.py  test_agent.py  test_longterm_memory.py
src/deepagents/: __init__.py  agent.py  context.py  events.py  graph.py  middleware.py  state.py  tools.py  tree.py
src/deepagents/middleware/: __init__.py  filesystem.py  observer.py  subagents.py
tests/: README.md  test_deepagents.py  test_middleware.py
tests/integration_tests/: test_deepagents.py  test_filesystem_middleware.py  test_hitl.py  test_subagent_middleware.py
